[gd_scene load_steps=16 format=3 uid="uid://ccnue8h5xbojr"]

[ext_resource type="Script" path="res://Scripts/Prototype/sc_proto_base.gd" id="1_c4euo"]
[ext_resource type="Texture2D" uid="uid://duhepon7yu1e6" path="res://Sprites/Level/BG/Background_Bar.png" id="2_0r4l3"]
[ext_resource type="FontFile" uid="uid://bcluggb067ur5" path="res://Other/Fonts/coolvetica/coolvetica rg.otf" id="3_brlgo"]
[ext_resource type="Texture2D" uid="uid://cuxhwwfkvnfl4" path="res://Sprites/UI/Health/UI_Health1.png" id="3_burex"]
[ext_resource type="Texture2D" uid="uid://cnvmf48dd3ft1" path="res://Sprites/UI/Health/UI_Health2.png" id="5_nfy31"]
[ext_resource type="Texture2D" uid="uid://dqvto0sounisp" path="res://Sprites/UI/Health/UI_Health3.png" id="6_53oqq"]
[ext_resource type="Texture2D" uid="uid://cgrvbeqjfxiat" path="res://Sprites/UI/Health/UI_Health4.png" id="7_vhiy5"]
[ext_resource type="Texture2D" uid="uid://4jh8j27q581j" path="res://Sprites/UI/Health/UI_Health5.png" id="8_pjbuc"]
[ext_resource type="Texture2D" uid="uid://tsvqrwouydg" path="res://Sprites/UI/Health/UI_Health6.png" id="9_ndis4"]
[ext_resource type="Texture2D" uid="uid://dp58rqxp33yk" path="res://Sprites/UI/Health/UI_Health7.png" id="10_ql4ss"]
[ext_resource type="Texture2D" uid="uid://biydfifaimc3n" path="res://Sprites/UI/Health/UI_Health8.png" id="11_ky8gt"]
[ext_resource type="Texture2D" uid="uid://edkemb4bmw13" path="res://Sprites/UI/Health/UI_Health9.png" id="12_cfi07"]
[ext_resource type="Texture2D" uid="uid://cyepivm8rhq4r" path="res://Sprites/UI/Health/UI_Health10.png" id="13_ts0x3"]
[ext_resource type="Texture2D" uid="uid://nw5nktvq3a1d" path="res://Sprites/UI/Health/UI_Health11.png" id="14_0esc6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gnauf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_burex")
}, {
"duration": 1.0,
"texture": ExtResource("5_nfy31")
}, {
"duration": 1.0,
"texture": ExtResource("6_53oqq")
}, {
"duration": 1.0,
"texture": ExtResource("7_vhiy5")
}, {
"duration": 1.0,
"texture": ExtResource("8_pjbuc")
}, {
"duration": 1.0,
"texture": ExtResource("9_ndis4")
}, {
"duration": 1.0,
"texture": ExtResource("10_ql4ss")
}, {
"duration": 1.0,
"texture": ExtResource("11_ky8gt")
}, {
"duration": 1.0,
"texture": ExtResource("12_cfi07")
}, {
"duration": 1.0,
"texture": ExtResource("13_ts0x3")
}, {
"duration": 1.0,
"texture": ExtResource("14_0esc6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HUDPrototype" type="Node"]
script = ExtResource("1_c4euo")

[node name="TopBar" type="Sprite2D" parent="."]
position = Vector2(640, 40)
scale = Vector2(4, 4)
texture = ExtResource("2_0r4l3")

[node name="BottomBar" type="Sprite2D" parent="."]
position = Vector2(640, 680)
scale = Vector2(4, 4)
texture = ExtResource("2_0r4l3")

[node name="HealthBar" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(199, 40)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_gnauf")
frame = 10

[node name="AttackQueue" type="Label" parent="."]
offset_left = 417.0
offset_top = 20.0
offset_right = 524.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("3_brlgo")
theme_override_font_sizes/font_size = 30
text = "Attacks:"

[node name="Slot1" type="Label" parent="."]
offset_left = 3.0
offset_top = 650.0
offset_right = 63.0
offset_bottom = 716.0
theme_override_fonts/font = ExtResource("3_brlgo")
text = "Slot 1 - I
Card: 
Selected"

[node name="Slot2" type="Label" parent="."]
offset_left = 69.0
offset_top = 649.0
offset_right = 129.0
offset_bottom = 715.0
theme_override_fonts/font = ExtResource("3_brlgo")
text = "Slot 2 - J
Card: 
Selected"

[node name="Slot3" type="Label" parent="."]
offset_left = 139.0
offset_top = 649.0
offset_right = 201.0
offset_bottom = 715.0
theme_override_fonts/font = ExtResource("3_brlgo")
text = "Slot 3 - K
Card: 
Selected"

[node name="Slot4" type="Label" parent="."]
offset_left = 209.0
offset_top = 650.0
offset_right = 269.0
offset_bottom = 716.0
theme_override_fonts/font = ExtResource("3_brlgo")
text = "Slot 4 - L
Card: 
Selected"

[node name="ReadyCombo" type="Label" parent="."]
offset_left = 278.0
offset_top = 652.0
offset_right = 369.0
offset_bottom = 718.0
theme_override_fonts/font = ExtResource("3_brlgo")
text = "<Space>
Start Combo:
Card Queue"

[node name="DeckPiles" type="Label" parent="."]
offset_left = 1125.0
offset_top = 641.0
offset_right = 1274.0
offset_bottom = 716.0
theme_override_fonts/font = ExtResource("3_brlgo")
theme_override_font_sizes/font_size = 29
text = "Deck: ##
(Discard: ##)"
